k8s/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kb-app-deployment
  labels:
    app : kb-app
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: kb-app
  template:
    metadata:
      labels:
        app: kb-app
      annotations:
        co.elastic.logs.kb-app/json.keys_under_root: "true"
        co.elastic.logs.kb-app/json.add_error_key: "true"
        co.elastic.logs.kb-app/json.message_key: "message"
    spec:
      containers:
        - name: kb-app
          image: 'ghcr.io/klosebrothers/kb-app:latest'
          imagePullPolicy: IfNotPresent
          terminationMessagePolicy: FallbackToLogsOnError
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: 256M
              cpu: '0.1'
            limits:
              memory: 256M
              cpu: '0.1'
      imagePullSecrets:
        - name: kb-github-registry-secret
