k8s/ingress.yml
apiVersion: v1
kind: Service
metadata:
  name: entwicklungstemplate-deployment
spec:
  selector:
    app: entwicklungstemplate-deployment
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: entwicklungstemplate-ingress-resource-nginx
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-entwicklungstemplate-prod"
    nginx.ingress.kubernetes.io/auth-url: "https://$host/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://$host/oauth2/start?rd=$escaped_request_uri"
spec:
  tls:
    - hosts:
        - entwicklungstemplate.klosebrothers.de
      secretName: letsencrypt-entwicklungstemplate-prod
  rules:
    - host: entwicklungstemplate.klosebrothers.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: entwicklungstemplate-deployment
                port:
                  number: 8080
  ingressClassName: nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: entwicklungstemplate-oauth2-proxy
spec:
  tls:
    - hosts:
        - entwicklungstemplate.klosebrothers.de
      secretName: letsencrypt-entwicklungstemplate-prod
  rules:
    - host: entwicklungstemplate.klosebrothers.de
      http:
        paths:
          - path: /oauth2
            pathType: Prefix
            backend:
              service:
                name: kb-google-oauth2-proxy
                port:
                  number: 4180
  ingressClassName: nginx
